--- a/FarmAnalytics.html
+++ b/FarmAnalytics.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link active homebtn" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,7 +60,7 @@
           <div class="nav-item mx-4">
             <a class="nav-link" data-bs-target="#exampleModalToggle" data-bs-toggle="modal"><i class="bi bi-person fs-3 "></i></a>
           </div>
-          <button type="button" class="p-2 btn btn-success ">Request Demo</button>
+          <button type="button" class="p-2 btn btn-success watt">Request Demo</button>
          
         </div>
       </div>
@@ -68,8 +68,8 @@
 
   <!--navbar end-->
     <!--banner section start--> 
-    <section class="banner container-fluid width:100%;">
-      <img src="./asserts/farm-analytics-b.png" alt="" class="img-fluid">
+    <section class="banner container-fluid width:100%; ">
+      <img src="./asserts/farm-analytics.jpeg" alt="" class="img-fluid">
 
     </section> 
     <!--banner section end-->
@@ -314,7 +314,7 @@
   </div>
   
 
-    
+    <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
