--- a/ai&ml.html
+++ b/ai&ml.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link active homebtn" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,7 +60,7 @@
           <div class="nav-item mx-4">
             <a class="nav-link" data-bs-target="#exampleModalToggle" data-bs-toggle="modal"><i class="bi bi-person fs-3 "></i></a>
           </div>
-          <button type="button" class="p-2 btn btn-success ">Request Demo</button>
+          <button type="button" class="p-2 btn btn-success watt">Request Demo</button>
          
         </div>
       </div>
@@ -161,7 +161,7 @@
      <div class="container-fluid my-5">
       <div class="row gy-3">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-          <div class=" text-dark position-relative">
+          <div class=" text-dark position-relative cardmm">
             <img src="./asserts/ai-ml-2.png" class="card-img w-75  mx-auto d-block my-auto" alt="..." >
             <div class="container bg-light rounded imgover p-3" width="90px" height="150px">
               <p class=" text-dark fw-bold" >Artificial Intelligence</p>
@@ -196,8 +196,8 @@
      </div>
      <!--img overlay end-->
     <!--faq section start-->
-    <div class="container-fluid p- my-5">
-      <h3 class="text-dark fw-bold">FAQs on AI/ML for Agriculture</h3>
+    <div class="container-fluid p- my-5 ">
+      <h3 class="text-dark fw-bold faq-m">FAQs on AI/ML for Agriculture</h3>
       <hr class="text-success ">
       <div class="faq">
         <div class="accordion" id="accordionExample">
@@ -354,7 +354,7 @@
   </div>
   
 
-    
+   <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
