--- a/ClimateSmartAgriculture.html
+++ b/ClimateSmartAgriculture.html
@@ -105,7 +105,7 @@
     </div>
     <!--info end-->
     <!--list start-->
-    <div class="container-fluid my-5 p-5">
+    <div class="container-fluid my-5 p-5 gy-5">
       <h2 class="fw-bold text-dark fs-1">Single Farm ERP Tool for Multiple Industrial Verticals</h2>
       <p class="fw-bold text-dark"> Improve your productivity and profitability with a powerful Farm ERP solution supported by our agricultural scientific expertise.</p>
       <div class="row my-5">
