--- a/CropProtection.html
+++ b/CropProtection.html
@@ -106,7 +106,7 @@
     </div>
     <!--info end-->
     <!--list start-->
-    <div class="container-fluid my-5 p-5">
+    <div class="container-fluid my-5 p-5 gy-5">
       <h2 class="fw-bold text-dark fs-1">Optimizing residue levels and reducing crop losses for agribusinesses</h2>
       <p class="fw-bold text-dark"> Industries that can benefit from smart and remote agronomy solution:</p>
       <div class="row my-5">
