--- a/FarmAnalytics.html
+++ b/FarmAnalytics.html
@@ -104,7 +104,7 @@
     </div>
     <!--info end-->
     <!--list start-->
-    <div class="container-fluid my-5 p-5">
+    <div class="container-fluid my-5 p-5 gy-5">
       <h2 class="fw-bold text-dark fs-1">Applications of Farm Analytics for different industries</h2>
       <p class="fw-bold text-dark">Any and all businesses have the ability to benefit from data significantly to create a healthy competitive edge. These agribusinesses in particular have immediate impact with live data:</p>
       <div class="row my-5">
