--- a/FarmManagement.html
+++ b/FarmManagement.html
@@ -105,7 +105,7 @@
     </div>
     <!--info end-->
     <!--list start-->
-    <div class="container-fluid my-5 p-5">
+    <div class="container-fluid my-5 p-5 gy-5">
       <h2 class="fw-bold text-dark fs-1">Enterprise farm management across various Industries</h2>
       <p class="fw-bold text-dark"> If you are in the business of managing farmers or farms our farm management module will help you manage it better.</p>
       <div class="row my-5">
