--- a/M-Commerce.html
+++ b/M-Commerce.html
@@ -105,7 +105,7 @@
     </div>
     <!--info end-->
     <!--list start-->
-    <div class="container-fluid my-5 p-5">
+    <div class="container-fluid my-5 p-5 gy-5">
       <h2 class="fw-bold text-dark fs-1">Applications of Agriculture Marketplace</h2>
       <p class="fw-bold text-dark">We design Agriculture Marketplace Software to best suit your requirements and help you succeed in an online marketplace model. With every detail for your online business centrally managed and tracked, the cumulative reports or analysis of your business strategy gets easier. This helps stimulate your growth and stay proactive about market trends and increase profits. Here are some key applications of agriculture marketplace software:</p>
       <div class="row my-5 gy-3">
