--- a/PrecisionFarming.html
+++ b/PrecisionFarming.html
@@ -105,7 +105,7 @@
     </div>
     <!--info end-->
     <!--list start-->
-    <div class="container-fluid my-5 p-5">
+    <div class="container-fluid my-5 p-5 gy-5">
       <h2 class="fw-bold text-dark fs-1">Precision Farming Software for agribusinesses who strive for lean production</h2>
       <p class="fw-bold text-dark"> If your goal is to increase productivity per unit area and efficiency of input and water consumption, then all you need is a tool to help you automate your process that can be measured and optimized. With KhetiBuddy’s solutions you can leverage digital solutions for practicing precision farming that suit your goals.</p>
       <div class="row my-5">
