--- a/ai&ml.html
+++ b/ai&ml.html
@@ -107,7 +107,7 @@
     </div>
     <!--info end-->
     <!--list start-->
-    <div class="container-fluid my-5 p-5">
+    <div class="container-fluid my-5 p-5 gy-5">
       <h2 class="fw-bold text-dark fs-1">Applications of AI and ML for Agriculture</h2>
       <p class="fw-bold text-dark"> Traditional methods are no longer enough to handle huge food demand, which is driving farmers and agri-based companies to find newer ways to increase production and reduce input and output waste. As a result, Artificial Intelligence (AI) and Machine Learning (ML) is steadily emerging as part of the agri industry's tech evolution. There's no doubt that crop yields and quality are more efficient now than they were centuries, or even decades ago with the help of AI. We’ll take a look at some of the most promising AI/ML use-cases for agriculture:</p>
       <div class="row my-5 gy-3">
