--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </div>
 <!--slider end-->
 <!--video frame start-->
-<div class="container-fluid bg-success p-4 text-white bg-opacity-7 mb-5">
+<div class="container-fluid bg-success p-4 text-white bg-opacity-7 my-5">
   <div class="row ">
     <div class="col-12 col-sm-12 col-md-6 col-lg-6 ">
       <h2 class="text-center fw-bold fs-1 mt-4">The Unified AgTech Platform</h2>
