--- a/iot.html
+++ b/iot.html
@@ -105,7 +105,7 @@
     </div>
     <!--info end-->
     <!--list start-->
-    <div class="container-fluid my-5 p-5">
+    <div class="container-fluid my-5 p-5 gy-5">
       <h2 class="fw-bold text-dark fs-1">Aspects of Farming automated and optimized using IoT for Agriculture</h2>
       <p class="fw-bold text-dark">IoT devices can provide you with a plethora of data regarding farm’s activities and status on crop and soil health at any given point in time. But integrating IoT devices across different solutions and bringing data in one view is a challenge with IoT devices. That’s why agtech platforms such as KhetiBuddy’s farm management platform solution can enable your IoT journey with a singular management view. Make your IoT implementation more accessible, manageable and seamless for your team :</p>
       <div class="row my-5 gy-3">
